1.5.22.dev0
 * #470: Move mysqldump options to the beginning of the command due to MySQL bug 30994.

1.5.21
 * #28: Optionally retry failing backups via "retries" and "retry_wait" configuration options.
 * #306: Add "list_options" MySQL configuration option for passing additional arguments to MySQL
   list command.
 * #459: Add support for old version (2.x) of jsonschema library.

1.5.20
 * Re-release with correct version without dev0 tag.

1.5.19
 * #387: Fix error when configured source directories are not present on the filesystem at the time
   of backup. Now, Borg will complain, but the backup will still continue.
 * #455: Mention changing borgmatic path in cron documentation.
 * Update sample systemd service file with more granular read-only filesystem settings.
 * Move Gitea and GitHub hosting from a personal namespace to an organization for better
   collaboration with related projects.
 * 1k ★s on GitHub!

1.5.18
 * #389: Fix "message too long" error when logging to rsyslog.
 * #440: Fix traceback that can occur when dumping a database.

1.5.17
 * #437: Fix error when configuration file contains "umask" option.
 * Remove test dependency on vim and /dev/urandom.

1.5.16
 * #379: Suppress console output in sample crontab and systemd service files.
 * #407: Fix syslog logging on FreeBSD.
 * #430: Fix hang when restoring a PostgreSQL "tar" format database dump.
 * Better error messages! Switch the library used for validating configuration files (from pykwalify
   to jsonschema).
 * Link borgmatic Ansible role from installation documentation:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#other-ways-to-install

1.5.15
 * #419: Document use case of running backups conditionally based on laptop power level:
   https://torsion.org/borgmatic/docs/how-to/backup-to-a-removable-drive-or-an-intermittent-server/
 * #425: Run arbitrary Borg commands with new "borgmatic borg" action. See the documentation for